<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pendulum_logging</name>
  <version>0.0.1</version>
  <description>Simple pendulum_control logging nodes</description>
  <maintainer email="liqsuq@rkgk.net">liqsuq</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>pendulum_msgs</depend>
  <build_depend>rclcpp_components</build_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
